# mol-gru4rec

./: .dockerignore  Makefile  README.md  install_remote.sh  preprocess.Dockerfile  pyproject.toml  pyproject_preprocess.toml  requirements.in
config/: __init__.py  config.py  gru4rec_config.py  gru4rec_config_ml-1m_64.json  gru4rec_config_ml-1m_64_cosine.json  gru4rec_config_ml-1m_64_dot_product.json  gru4rec_config_ml-1m_64_mol.json  gru4rec_config_ml-1m_64_mol_uid.json  gru4rec_config_ml-1m_64_mol_uid_semantic_emb.json  gru4rec_config_ml-25m_64.json  similarity_config.py
gru4rec/: __init__.py  dataset_helpers.py  gru4rec_model.py  gru4rec_torch_model.py  metrics.py
gru4rec/similarity/: cosine_similarity.py  dot_product_similarity.py  similarity_module.py  similarity_utils.py
gru4rec/similarity/mol/: item_embeddings_fns.py  mol_similarity.py  query_embeddings_fns.py
preprocess/: __main__.py  create_movie_embeddings.py  extract_movie_data.py
scripts/: convert_tf_records_to_parquet.py  install_remote.sh  install_remote0.sh  install_remote1.sh  install_remote2.sh  install_remote3.sh
tests/: test_config.py  test_preprocess.py
train/: __main__.py  data.py  datasets.py  datasets_torch.py  early_stopping_callback.py  run.py  run_torch.py  save_results.py  string_lookup.py
