[project]
name = "mol-gru4rec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.6.0",
    "torch>=2.6.0",
]

[tool.uv.sources]
fire = { index = "pypi" }

[[tool.uv.index]]
name = "pypi"
# Required URL for the index.
url = "https://pypi.python.org/simple"
default = true
